templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sapura-app
  namespace: project-testing
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      serviceAccountName: frontend-api
      containers:
        - name: frontend
          image: image-registry.openshift-image-registry.svc:5000/project-testing/sapura-app:1.4
          resources:
            requests:
              cpu: "250m"
              memory: "1000Mi"
            limits:
              cpu: "500m"
              memory: "2000Mi"
          ports:
            - containerPort: 3000
