templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sapura-app-service
  namespace: project-testing
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
