templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sapura-app-route
  namespace: project-production
spec:
  host: production-sapura-app-route.apps.cluster-bp2lg.bp2lg.sandbox1562.opentlc.com
  to:
    kind: Service
    name: sapura-app-service
  port:
    targetPort: 3000
  wildcardPolicy: None
